--- a/main.html
+++ b/main.html
@@ -10,7 +10,26 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<form>
+<label for="name">Name</label>
+<input type="text" id="name" placeholder="Name"><br>
+<label for="phone">Phone Number</label>
+<input type="text" id="phone" placeholder="phone number"><br>
+<label for="address">Address</label>
+<input type="text" id="address" placeholder="Address"><br>
+<label for="checkbox">Have you ever lived with a Dog before?</label>
+<input type="checkbox" id="checkbox" value=" Have you ever lived with a Dog before?"><br>
+<label for="multiSelect">Please select your preferred breeds</label>
+<select id="multiSelect">
+<option value="bull" >Bull dog</option>
+<option value="Labrador" >Labrador</option>
+<option value="German" >German Shepherd</option>
+</select><br>
+<button id="submit" type="submit" value="submit">Submit</button>
 
+
+
+</form>
 </body>
 
 </html>
