--- a/main.html
+++ b/main.html
@@ -14,11 +14,11 @@
 <label for="name">Name</label>
 <input type="text" id="name" placeholder="Name"><br>
 <label for="phone">Phone Number</label>
-<input type="text" id="phone" placeholder="phone number"><br>
+<input type="text" id="phone" placeholder="Phone Number"><br>
 <label for="address">Address</label>
 <input type="text" id="address" placeholder="Address"><br>
 <label for="checkbox">Have you ever lived with a Dog before?</label>
-<input type="checkbox" id="checkbox" value=" Have you ever lived with a Dog before?"><br>
+<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?"><br>
 <label for="multiSelect">Please select your preferred breeds</label>
 <select id="multiSelect">
 <option value="bull" >Bull dog</option>
