--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 <option value="Labrador" >Labrador</option>
 <option value="German" >German Shepherd</option>
 </select><br>
-<button id="submit" type="submit" value="submit">Submit</button>
+<button id="submit" type="submit" value="submit" name="submit">Submit</button>
 
 
 
