--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 <option value="Labrador" >Labrador</option>
 <option value="German" >German Shepherd</option>
 </select><br>
-<input type="submit" id="submit" value="submit">
+<input type="submit" id="submit" value="Submit">
 </form>
 </body>
 
